syntax = "proto3";

package api.commitee.v1;

import "google/api/datetime.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package="github.com/qthuy2k1/thesis_management_backend/commitee/api/v1";

service CommiteeService {
    rpc CreateCommitee(CreateCommiteeRequest) returns (CreateCommiteeResponse){
        option (google.api.http) = {
            post: "/api/commitee"
            body: "*"
        };
    }
    
    rpc GetCommitee(GetCommiteeRequest) returns (GetCommiteeResponse){
        option (google.api.http) = {
            get: "/api/commitee/{id}"
        };
    }

    rpc UpdateCommitee(UpdateCommiteeRequest) returns (UpdateCommiteeResponse){
        option (google.api.http) = {
            put: "/api/commitee/{id}"
            body: "*"
        };
    }

    rpc DeleteCommitee(DeleteCommiteeRequest) returns (DeleteCommiteeResponse){
        option (google.api.http) = {
            delete: "/api/commitee/{id}"
        };
    }

    rpc GetCommitees(GetCommiteesRequest) returns (GetCommiteesResponse) {
        option (google.api.http) = {
            get: "/api/commitee"
        };
    }

    // rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse){
    //     option (google.api.http) = {
    //         post: "/api/room"
    //         body: "*"
    //     };
    // }
    
    // rpc GetRoom(GetRoomRequest) returns (GetRoomResponse){
    //     option (google.api.http) = {
    //         get: "/api/room/{id}"
    //     };
    // }

    // rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse){
    //     option (google.api.http) = {
    //         put: "/api/room/{id}"
    //         body: "*"
    //     };
    // }

    // rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse){
    //     option (google.api.http) = {
    //         delete: "/api/room/{id}"
    //     };
    // }

    // rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse) {
    //     option (google.api.http) = {
    //         get: "/api/room"
    //     };
    // }

    rpc CreateCouncil(CreateCouncilRequest) returns (CreateCouncilResponse){
        option (google.api.http) = {
            post: "/api/council"
            body: "*"
        };
    }
    
    rpc GetCouncil(GetCouncilRequest) returns (GetCouncilResponse){
        option (google.api.http) = {
            get: "/api/council/{id}"
        };
    }

    // rpc UpdateCouncil(UpdateCouncilRequest) returns (UpdateCouncilResponse){
    //     option (google.api.http) = {
    //         put: "/api/council/{id}"
    //         body: "*"
    //     };
    // }

    // rpc DeleteCouncil(DeleteCouncilRequest) returns (DeleteCouncilResponse){
    //     option (google.api.http) = {
    //         delete: "/api/council/{id}"
    //     };
    // }

    rpc GetCouncils(GetCouncilsRequest) returns (GetCouncilsResponse) {
        option (google.api.http) = {
            get: "/api/council"
        };
    }
}

message CommonCommiteeResponse {
    int64 statusCode = 1 [(validate.rules).int64.gte = 1];
    string message = 2 [(validate.rules).string = {min_len: 2}];
}


// ====== commitee ======
message CommiteeInput {
    google.type.DateTime startDate = 1;
    string shift = 2 [(validate.rules).string = {min_len: 2}];
    string time = 3;
}

message CommiteeResponse {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    google.type.DateTime startDate = 2;
    string shift = 3 [(validate.rules).string = {min_len: 2}];
    int64 roomID = 4;
    repeated UserCommiteeResponse lecturers = 5;
    repeated UserCommiteeResponse student = 6;
}

message UserCommiteeResponse {
    string id = 1;
    optional string class = 2 [(validate.rules).string = {min_len: 4, max_len: 10}];
    optional string major = 3 [(validate.rules).string = {min_len: 2}];
    optional string phone = 4 [(validate.rules).string = {min_len: 10, max_len: 11}];
    string photoSrc = 5;
    string role = 6 [(validate.rules).string = {in: ["teacher", "student", "admin"]}];
    string name = 7 [(validate.rules).string = {min_len: 2, max_len: 200}];
    string email = 8 [(validate.rules).string.email = true];
}

message CreateCommiteeRequest {
   CommiteeInput commitee = 1 [(validate.rules).message = {required: true}];
}

message CreateCommiteeResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== GET ======
message GetCommiteeRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message GetCommiteeResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
    CommiteeResponse commitee = 2 [(validate.rules).message = {required: true}];
}

// ====== PUT ======
message UpdateCommiteeRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    CommiteeInput commitee = 2 [(validate.rules).message = {required: true}];
}

message UpdateCommiteeResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== DELETE ======
message DeleteCommiteeRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message DeleteCommiteeResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
}


// ====== GET ALL ======
message GetCommiteesRequest {}

message GetCommiteesResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
    int64 totalCount = 2 [(validate.rules).int64.gte = 0];
    repeated CommiteeResponse commitees = 3;
}




message CommiteeUserDetail {
    int64 commiteeID = 1 [(validate.rules).int64.gte = 1];
    string lecturerID = 2 [(validate.rules).string = {min_len: 2}];
    repeated string studentID = 3;
}

message CreateCommiteeUserDetailRequest {
   CommiteeUserDetail commiteeUserDetail = 1 [(validate.rules).message = {required: true}];
}

message CreateCommiteeUserDetailResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== GET ======
message GetCommiteeUserDetailRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message GetCommiteeUserDetailResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
    CommiteeUserDetail commiteeUserDetail = 2 [(validate.rules).message = {required: true}];
}

// ====== PUT ======
message UpdateCommiteeUserDetailRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    CommiteeUserDetail commiteeUserDetail = 2 [(validate.rules).message = {required: true}];
}

message UpdateCommiteeUserDetailResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
}

// ====== DELETE ======
message DeleteCommiteeUserDetailRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message DeleteCommiteeUserDetailResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
}


// ====== GET ALL ======
message GetCommiteeUserDetailsRequest {}

message GetCommiteeUserDetailsResponse {
    CommonCommiteeResponse response = 1 [(validate.rules).message = {required: true}];
    int64 totalCount = 2 [(validate.rules).int64.gte = 0];
    repeated CommiteeUserDetail commiteeUserDetails = 3;
}



message ParamSchedule {
    string startTime = 1;
    string endTime = 2;
}

message TimeSlotItem {
    string id = 1;
    string date = 2;
    string time = 3;
    string shift = 4;
}

message RoomScheduleInput {
    string name = 1;
    string type = 2;
    string school = 3;
    string description = 4;
}

message TimeSlotForStudent {
    RoomScheduleInput room = 1;
    repeated TimeSlotItem timeSlots = 2;
}

message ScheduleDef {
    RoomScheduleInput room = 1;
    repeated TimeSlotForStudent timeSlots = 2;
}

message UserScheduleInput {
    string id = 1;
    string class = 2 [(validate.rules).string = {min_len: 4, max_len: 10}];
    optional string major = 3 [(validate.rules).string = {min_len: 2}];
    optional string phone = 4 [(validate.rules).string = {min_len: 10, max_len: 11}];
    string photoSrc = 5;
    string role = 6 [(validate.rules).string = {in: ["lecturer", "student", "admin"]}];
    string name = 7 [(validate.rules).string = {min_len: 2, max_len: 200}];
    string email = 8 [(validate.rules).string.email = true];
}

message CouncilDef {
    string id = 1;
    repeated UserScheduleInput council = 2; 
    ScheduleDef schedule = 3;
}

message ThesisDef {
    string id = 1;
    repeated CouncilDef thesis = 2;
    int64 fitness = 3;
}


message RoomScheduleResponse {
    int64 id = 1;
    string name = 2;
    string type = 3;
    string school = 4;
    string description = 5;
}

// message CreateRoomRequest {
//    RoomScheduleInput room = 1;
// }

// message CreateRoomResponse {
//     CommonCommiteeResponse response = 1;
//     RoomScheduleResponse room = 2;
// }

// // ====== GET ======
// message GetRoomRequest {
//     int64 id = 1;
// }

// message GetRoomResponse {
//     CommonCommiteeResponse response = 1;
//     RoomScheduleResponse room = 2;
// }

// // ====== PUT ======
// message UpdateRoomRequest {
//     int64 id = 1;
//     RoomScheduleInput room = 2;
// }

// message UpdateRoomResponse {
//     CommonCommiteeResponse response = 1;
// }

// // ====== DELETE ======
// message DeleteRoomRequest {
//     int64 id = 1;
// }

// message DeleteRoomResponse {
//     CommonCommiteeResponse response = 1;
// }


// // ====== GET ALL ======
// message GetRoomsRequest {
//     optional string name = 1;
//     optional string type = 2;
//     optional string school = 3;
// }

// message GetRoomsResponse {
//     CommonCommiteeResponse response = 1;
//     int64 totalCount = 2;
//     repeated RoomScheduleResponse rooms = 3;
// }



message CouncilInput {
    string lecturerID = 1;
    int64 thesisID = 2;
}

message CouncilResponse {
    int64 id = 1;
    string lecturerID = 2;
    int64 thesisID = 3;
}

message CreateCouncilRequest {
    CouncilInput council = 1;
}

message CreateCouncilResponse  {
    CommonCommiteeResponse response = 1;
}

message GetCouncilRequest {
    int64 id = 1;
}

message GetCouncilResponse  {
    CouncilResponse council = 1;
}

message GetCouncilsRequest {

}

message GetCouncilsResponse  {
    repeated CouncilResponse councils = 1;
}
